# interactions.py

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .token  404.html  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  bot.py  cog.py  extra.css  index.html  interactions.py.code-workspace  main.py  mkdocs.yml  objects.inv  pre_push.py  pyproject.toml  readthedocs.yaml  readthedocs.yml  requirements-docs.txt  requirements-lint.txt  requirements-testing.txt  requirements.txt  setup.cfg  setup.py  simple_bot.py  simple_cog.py  sitemap.xml  test.py  test_2.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  custom---miscellaneous.md  doc_improvement_req.yml  report-bug.md  report-bug.yml  request-feature.md  request-feature.yml
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  precommit.yml  pytest-push.yml  python-publish.yml  testing.yml
Guides/: index.html
Guides/01 Getting Started/: index.html
Guides/02 Creating Your Bot/: index.html
Guides/03 Creating Commands/: index.html
Guides/04 Context Menus/: index.html
Guides/05 Components/: index.html
Guides/06 Modals/: index.html
Guides/08 Converters/: index.html
Guides/10 Events/: index.html
Guides/100 Migration From D.py/: index.html
Guides/20 Extensions/: index.html
Guides/21 Advanced Extension Usage/: index.html
Guides/22 Live Patching/: index.html
Guides/23 Voice/: index.html
Guides/24 Localisation/: index.html
Guides/25 Error Tracking/: index.html
Guides/26 Prefixed Commands/: index.html
Guides/30 Pagination/: index.html
Guides/40 Tasks/: index.html
Guides/80 Sharding/: index.html
Guides/90 Example/: index.html
Guides/97 Migration From D.py/: index.html
Guides/98 Migration from 4.X/: index.html
Guides/99 2.x Migration_NAFF/: index.html
assets/javascripts/: bundle.0d59af3e.min.js  bundle.10c6cd24.min.js  bundle.10eaffea.min.js  bundle.2047e101.min.js  bundle.2b189340.min.js  bundle.6e7f53b1.min.js  bundle.7001d404.min.js  bundle.734a6fd4.min.js  bundle.7c5c0157.min.js  bundle.803ed251.min.js  bundle.a59f24f2.min.js  bundle.d7e51e09.min.js
changelog/: index.html
dis_interact/: __init__.py  base.py  callback.py  context.py  http.py  model.py  override.py
dis_interact/types/: enums.py
discord/ext/: slash.py
discord_slash/: __init__.py  application.py  bot.py  client.py  cog_ext.py  commands.py  const.py  context.py  dpy_overrides.py  error.py  http.py  interaction.py  model.py  objects.py  state.py
discord_slash/utils/: Paginator.py  __init__.py  manage_commands.py  manage_components.py
docs/: api.cache.rst  api.dispatch.rst  api.enums.rst  api.error.rst  api.gateway.rst  api.http.rst  api.models.audit_log.rst  api.models.channel.rst  api.models.emoji.rst  api.models.flags.rst  api.models.guild.rst  api.models.gw.rst  api.models.intents.rst  api.models.member.rst  api.models.message.rst  api.models.misc.rst  api.models.presence.rst  api.models.role.rst  api.models.rst  api.models.team.rst  api.models.user.rst  api.models.voice.rst  api.models.webhook.rst  api.rst  client.rst  components.rst  conf.py  context.rst  discord_slash.cog_ext.rst  discord_slash.context.rst  discord_slash.http.rst  discord_slash.model.rst  discord_slash.rst  discord_slash.utils.manage_commands.rst  discord_slash.utils.manage_components.rst  discord_slash.utils.rst  enums.rst  events.rst  ext.base.rst  ext.converter.rst  (+23 more)
docs/_snippets/: discord_inv.md  github_link.md
docs/src/: changelog.md  extra.css  index.md
examples/: bot.py
html-files/: .buildinfo  api.cache.html  api.dispatch.html  api.enums.html  api.error.html  api.gateway.html  api.html  api.http.html  api.models.channel.html  api.models.guild.html  api.models.html  api.models.intents.html  api.models.member.html  api.models.message.html  api.models.misc.html  api.models.presence.html  api.models.role.html  api.models.team.html  api.models.user.html  api.models.voice.html  client.html  components.html  enums.html  faq.html  genindex.html  gettingstarted.html  index.html  models.command.html  models.component.html  models.html  objects.inv  quickstart.html  search.html  searchindex.js
html-files/.doctrees/: api.cache.doctree  api.dispatch.doctree  api.doctree  api.enums.doctree  api.error.doctree  api.gateway.doctree  api.http.doctree  api.models.channel.doctree  api.models.doctree  api.models.guild.doctree  api.models.intents.doctree  api.models.member.doctree  api.models.message.doctree  api.models.misc.doctree  api.models.presence.doctree  api.models.role.doctree  api.models.team.doctree  api.models.user.doctree  api.models.voice.doctree  client.doctree  components.doctree  enums.doctree  environment.pickle  faq.doctree  gettingstarted.doctree  index.doctree  models.command.doctree  models.component.doctree  models.doctree  quickstart.doctree
html-files/_sources/: api.error.rst.txt  api.gateway.rst.txt  api.models.member.rst.txt  api.models.role.rst.txt  api.models.rst.txt  api.rst.txt  components.rst.txt  index.rst.txt  models.command.rst.txt  models.rst.txt
html-files/_static/: basic.css  documentation_options.js  insipid-sidebar-readthedocs.css  insipid-sidebar.js  insipid.css  insipid.js
interactions/: __init__.py  base.py  bot.py  client.py  client.pyi  context.py  context.pyi  decor.py  decor.pyi  enums.py  error.py  gateway.py  model.py  override.py
interactions/api/: __init__.py  base.py  cache.py  cache.pyi  dispatch.py  dispatch.pyi  enums.py  error.py  error.pyi  gateway.py  gateway.pyi  http.py  models.py
interactions/client/: __init__.py  auto_shard_client.py  bot.py  bot.pyi  client.py  const.py  context.py  context.pyi  decor.py  decor.pyi  enums.py  get.py  (+3 more)
search/: search_index.json
tests/: conftest.py  consts.py  test_all_get_functions.py  test_all_noreturn_functions.py  test_bot.py  test_cache.py  test_channel_helpers.py  test_contexts.py  test_cooldowns.py  test_emoji.py  test_functionality_of_all_functions.py  test_guild_helpers.py  test_library_exception.py  test_new_command_system.py  test_old_command_system.py  utils.py
(+741 files in other folders)
