[tool.poetry]
name = "interactions"
version = "5.0.0"
description = "Easy, simple, scalable and modular: a Python API wrapper for interactions."
authors = [
    "LordOfPolls <naff@lordofpolls.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.8.3"
attrs = ">=22.1.0"
mypy = ">0.930"
discord-typings = "^0.5.1"
tomli = "^2.0.1"
emoji = "^2.1.0"

# Optional dependencies
orjson  = {version = "^3.6.8", optional = true}
jurigged = {version = "^0.5.3", optional = true}

[tool.poetry.extras]
orjson = ["orjson"]
jurigged = ["jurigged"]

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = "naff.ext.mypy"

[tool.pyright]
useLibraryCodeForTypes = true
reportMissingImports = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = [
    "tests/*",
]

[build-system]
requires = [
    "setuptools",
    "tomli",
]
build-backend = "setuptools.build_meta"

[tools.coverage.run]
source = [
    "interactions",
]
