[tool.poetry]
name = "interactions"
version = "5.0.0"
description = "Easy, simple, scalable and modular: a Python API wrapper for interactions."
authors = [
    "LordOfPolls <naff@lordofpolls.com>",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.8.3"
attrs = ">=22.1.0"
mypy = ">0.930"
discord-typings = "^0.5.1"
tomli = "^2.0.1"
emoji = "^2.1.0"

# Optional dependencies
aiodns = { version = "*", optional = true }
orjson = { version = "*", optional = true }
Brotli = { version = "*", optional = true }
faust-cchardet = { version = "*", optional = true }
uvloop = { version = "*", optional = true, platform = "!win32" }
mkdocs-autorefs = { version = "*", optional = true }
mkdocs-awesome-pages-plugin = { version = "*", optional = true }
mkdocs-material = { version = "*", optional = true }
mkdocstrings-python = { version = "*", optional = true }
mkdocs-minify-plugin = { version = "*", optional = true }
mkdocs-git-committers-plugin-2 = { version = "*", optional = true }
mkdocs-git-revision-date-localized-plugin = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-recording = { version = "*", optional = true }
pytest-asyncio = { version = "*", optional = true }
pytest-cov = { version = "*", optional = true }
python-dotenv = { version = "*", optional = true }
typeguard = { version = "*", optional = true }
pre-commit = { version = "*", optional = true }

[tool.poetry.extras]
voice = ["PyNaCl>=1.5.0,<1.6"]
speedup = ["aiodns", "orjson", "Brotli", "faust-cchardet", "uvloop"]
sentry = ["sentry-sdk"]
jurigged = ["jurigged"]
console = ["aioconsole>=0.6.0"]
docs = ["mkdocs-autorefs", "mkdocs-awesome-pages-plugin", "mkdocs-material", "mkdocstrings-python", "mkdocs-minify-plugin", "mkdocs-git-committers-plugin-2", "mkdocs-git-revision-date-localized-plugin"]
tests = ["pytest", "pytest-recording", "pytest-asyncio", "pytest-cov", "python-dotenv", "typeguard"]

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
skip = ["__init__.py"]

[tool.mypy]
ignore_missing_imports = true
plugins = "naff.ext.mypy"

[tool.pyright]
useLibraryCodeForTypes = true
reportMissingImports = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
omit = [
    "tests/*",
]

[build-system]
requires = [
    "setuptools",
    "tomli",
]
build-backend = "setuptools.build_meta"

[tools.coverage.run]
source = [
    "interactions",
]

[tool.pytest.ini_options]
addopts = "-l -ra --durations=2 --cov=./ --cov-report xml:coverage.xml --junitxml=TestResults.xml"
doctest_optionflags = "NORMALIZE_WHITESPACE"
asyncio_mode="auto"
log_cli = "1"
# log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
